--- a/styles.css
+++ b/styles.css
@@ -186,6 +186,35 @@ img{
   right: 0;
 }
 
+/*==== Variable Dark theme ====*/
+body.dark-theme{
+  /*HSL color mode*/
+--first-color-second:hs1(var(-- hue-color),30%,61%);
+--title-color:hsl(var(-- hue-color),8%,95%);
+--text-color:hs1(var(-- hue-color),8%,75%);
+--input-color:hs1(var(-- hue-color),29%,96%);
+--body-color:hs1(var(-- hue-color),60%,12%);
+--container-color: hsl(var(--hue-color), 29%, 16%);
+}
+
+
+/*===== Button Dark/Light ====*/
+.nav__btns{
+  display: flex;
+  align-items: center;
+}
+
+.change-theme{
+  font-size: 1.25rem;
+  color: var(--title-color);
+  margin-right: var(--mb-1);
+  cursor: pointer;
+}
+
+.change-theme:hover{
+  color: var(--first-color);
+}
+
 /*===== HOME =====*/
 
 .home{
